fix(theming): adding toast overflow text css

--- a/packages/crayons-core/src/components/toast-message/toast-message.scss
+++ b/packages/crayons-core/src/components/toast-message/toast-message.scss
@@ -24,6 +24,9 @@
   box-sizing: border-box;
   box-shadow: 0px 2px 4px rgba(18, 52, 77, 0.06),
     0px 2px 16px rgba(18, 52, 77, 0.16);
+  overflow-wrap: anywhere;
+  word-break: break-word;
+  white-space: normal;
 
   &.success {
     border-top: 5px solid $color-success-500;
